modal files en cours

--- a/templates/backend/file/_editModal.html.twig
+++ b/templates/backend/file/_editModal.html.twig
@@ -22,15 +22,16 @@
                 <label for="fileDescription">Description</label>
                 <input class="form-control" type="text" name="fileDescription" id="fileDescription">
             </div>
-            <div class="input-group">
-              <div class="form-group mr-1">
-                  <label for="fileCommercial">Commercial</label>
-                  <input class="form-control" type="text" name="fileCommercial" id="fileCommercial">
-              </div>
-              <div class="form-group ml-1">
-                  <label for="fileUsers">Utilisateurs</label>
-                  <input class="form-control" type="text" name="fileUsers" id="fileUsers">
-              </div>
+            <div class="form-group">
+                <label for="fileCommercial">Commercial</label>
+                <input class="form-control" type="text" name="fileCommercial" id="fileCommercial">
+            </div>
+            <div class="form-group">
+                <label for="isActive">Document actif</label>
+                <select name="isActive" id="isActive" class="form-control">
+                  <option value="true">oui</option>
+                  <option value="false">non</option>
+                </select>
             </div>
         </form>
       </div>
