--- a/templates/backend/file/show.html.twig
+++ b/templates/backend/file/show.html.twig
@@ -9,34 +9,30 @@
         <tbody>
             <tr>
                 <th>Id</th>
-                <td>{{ files.id }}</td>
+                <td>{{ file.id }}</td>
             </tr>
             <tr>
-                <th>Nom du fichier</th>
-                <td>{{ files.name }}</td>
+                <th>Nom du document</th>
+                <td>{{ file.name }}</td>
             </tr>
             <tr>
                 <th>Type</th>
-                <td>{{ files.type }}</td>
+                <td>{{ file.type }}</td>
             </tr>
             <tr>
                 <th>Description</th>
-                <td>{{ files.description }}</td>
+                <td>{{ file.description }}</td>
             </tr>
             <tr>
-                <th>Commercial</th>
-                <td>{{ files.commercial }}</td>
-            </tr>
-            <tr>
-                <th>Utilisateurs</th>
-                <td>{{ files.user }}</td>
+                <th>Document actif</th>
+                <td>{{ post.isActive ? 'Yes' : 'No' }}</td>
             </tr>
         </tbody>
     </table>
 
     <a href="{{ path('backend_file_index') }}">back to list</a>
 
-    <a href="{{ path('backend_file_edit', {'id': files.id}) }}">edit</a>
+    {# <a href="{{ path('backend_file_edit', {'id': files.id}) }}">edit</a> #}
 
     {# {{ include('backend/company/_delete_form.html.twig') }} #}
 {% endblock %}
