--- a/templates/user/profil.html.twig
+++ b/templates/user/profil.html.twig
@@ -5,15 +5,15 @@
 {% block body %}
      <!-- Container -->
     {# <div class="container-fluid px-0 py-5 bg-white"> #}
-            <div class="container-fluid">
+            <div class="container-fluid bg-white bo">
                             <!-- Main Back-office Adhérents -->
-                <section class="backoffice p-5 py-0">
+                <section class="backoffice bg-white p-5 py-0">
                     <!-- Profil de l'adhérent -->
                     <div class="container-fluid profil text-center mb-5 ">
                         <div class="card" style="width: 20rem;">
                             <img src="https://via.placeholder.com/468x200?text=Image+de+la+pharmacie" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 id="bo-h5" class="card-title text-uppercase">Mon profil adhérent</h5>                            
+                                <h5 id="bo-h5" class="card-title text-uppercase font-weight-bold">Mon profil adhérent</h5>
                                 <p class="card-text"><strong>Nom <br></strong>Thibaud</p>
                                 <p class="card-text"><strong>Prénom<br></strong>Éléonore</p>
                                 <p class="card-text"><strong>Adresse<br></strong>19, rue des Nations Unies
@@ -33,7 +33,8 @@
                     </div>
                     <!-- Section de téléchargement + tableau de fichiers -->
                     <div class="container-fluid upload mb-5 text-center ">
-                        <h5 class="card-title text-center text-uppercase">Mon espace document</h5>
+                        <h5 class="card-title text-center text-uppercase font-weight-bold">Mon espace document</h5>
+                         <h6 class="card-title text-center">Envoyer un document à mon conseiller</h6>
                         <form class="container-fluid mx-auto">
                             <div class="form-group">
                                 <label for="exampleFormControlSelect1">
