--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -272,56 +272,30 @@
                     </button>
                 </form>
             </section>
+            <!--Modal v.1-->
+            <div class="modal" tabindex="-1" role="dialog" id="popup">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Politique de confidentialité</h5>
+                        <button type="button" id="popupClose" class="close" data-dismiss="modal" aria-label="Close" onclick="this.parentElement.parentElement.style.display='none';">
+                        <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <p>Nous utilisons des cookies pour vous garantir la meilleure expérience sur notre site web. La navigation sur ce site implique leur acceptation.</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-primary" id="popupOK" onclick="this.parentElement.parentElement.style.display='none';">
+                            OK
+                            <i class="fas fa-check"></i>
+                        </button>
+                        <button type="button" class="btn btn-black" data-dismiss="modal"> <a href="{{ path('rgpd') }}">En savoir plus</a></button>
+                    </div>
+                    </div>
+                </div>
+            </div>
+
         </main>
-        {# <div class="modal fade" id="myModal">
-            <div class="modal-header">
-                <a class="close" data-dismiss="modal">×</a>
-                <h3>Modal header</h3>
-            </div>
-            <div class="modal-body">
-                <p>One fine body…</p>
-            </div>
-            <div class="modal-footer">
-                <a href="#" class="btn">Close</a>
-                <a href="#" class="btn btn-primary">Save changes</a>
-            </div>
-        </div>         #}
-
-    <script>
-        // When the user scrolls down 20px from the top of the document, show the button
-        window.onscroll = function() {scrollFunction()};
-
-        function scrollFunction() {
-        if (document.body.scrollTop > 1800 || document.documentElement.scrollTop > 1800) {
-        document.getElementById("myBtn").style.display = "block";
-        } else {
-        document.getElementById("myBtn").style.display = "none";
-        }
-        }
-
-        // When the user clicks on the button, scroll to the top of the document
-        function topFunction() {
-        window.scrollTo(0,0);
-        }
-
-        // Modals
-
-        // Parallax
-        function parallax() {
-        var $slider = document.getElementById("parallax");
-
-        var yPos = window.pageYOffset / $slider.dataset.speed;
-        yPos = -yPos;
         
-        var coords = '0% '+ yPos + 'px';
-        
-        $slider.style.backgroundPosition = coords;
-    }
-
-    window.addEventListener("scroll", function(){
-        parallax();	
-    });
-
-    </script>
-
 {% endblock %}
