--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -286,11 +286,11 @@
                         <p>Nous utilisons des cookies pour vous garantir la meilleure expérience sur notre site web. La navigation sur ce site implique leur acceptation.</p>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" id="popupOK" onclick="this.parentElement.parentElement.style.display='none';">
+                        <button type="button" class="btn btn-success" id="popupOK" onclick="this.parentElement.parentElement.style.display='none';">
                             OK
                             <i class="fas fa-check"></i>
                         </button>
-                        <button type="button" class="btn btn-black" data-dismiss="modal"> <a href="{{ path('rgpd') }}">En savoir plus</a></button>
+                        <button type="button" class="btn btn-light" data-dismiss="modal"><a href="{{ path('rgpd') }}" class="a-rgpd">En savoir plus</a></button>
                     </div>
                     </div>
                 </div>
