--- a/public/css/app.css
+++ b/public/css/app.css
@@ -244,7 +244,7 @@ footer > div > .h6 {
 #myBtn {
     display: none; /* Hidden by default */
     position: fixed; /* Fixed/sticky position */
-    bottom: 220px; /* Place the button at the bottom of the page */
+    bottom: 120px; /* Place the button at the bottom of the page */
     right: 30px; /* Place the button 30px from the right */
     z-index: 99; /* Make sure it does not overlap */
     border: none; /* Remove borders */
@@ -258,7 +258,7 @@ footer > div > .h6 {
   }
   
   #myBtn:hover {
-    background-color: var(--white); /* Add a dark-grey background on hover */
+    background-color: var(--white); /* Add a white background on hover */
     color: #28A645; /* Set a background color */
   }
 
@@ -300,9 +300,6 @@ footer > div > .h6 {
     margin: 3rem 0;
 }
 
-#bo-h5 {
-
-}
 
 /*Page RGPD*/
 .rgpd {
@@ -368,11 +365,11 @@ footer > div > .h6 {
 }
 
 /*Modal*/
-.a-rgpd {
+/* .a-rgpd {
     color: var(--green);
 }
 
 .a-rgpd:hover {
     color: black;
     text-decoration: none;
-}
+} */
