--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -273,19 +273,19 @@
                 </form>
             </section>
             <!--Modal v.1-->
-            <div class="modal" tabindex="-1" role="dialog" id="popup">
+            <div class="modal hide fade bd-example-modal-lg" tabindex="-1" role="dialog" id="myModal" >
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title">Politique de confidentialité</h5>
-                        <button type="button" id="popupClose" class="close" data-dismiss="modal" aria-label="Close" onclick="this.parentElement.parentElement.style.display='none';">
-                        <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <p>Nous utilisons des cookies pour vous garantir la meilleure expérience sur notre site web. La navigation sur ce site implique leur acceptation.</p>
-                    </div>
-                    <div class="modal-footer">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Politique de confidentialité</h5>
+                            <button type="button" id="popupClose" class="close" data-dismiss="modal" aria-label="Close" onclick="this.parentElement.parentElement.style.display='none';">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <p>Nous utilisons des cookies pour vous garantir la meilleure expérience sur notre site web. La navigation sur ce site implique leur acceptation.</p>
+                        </div>
+                        <div class="modal-footer">
                         <button type="button" class="btn btn-success" id="popupOK" onclick="this.parentElement.parentElement.style.display='none';">
                             OK
                             <i class="fas fa-check"></i>
@@ -295,6 +295,20 @@
                     </div>
                 </div>
             </div>
+
+            <!--Modal v.2-->
+            {# <div class="modal hide fade" id="myModal">
+                <div class="modal-header">
+                    <a class="close" data-dismiss="modal">×</a>
+                    <h3>Modal header</h3>
+                </div>
+                <div class="modal-body">
+                    <p>One fine body…</p>
+                </div>
+                <div class="modal-footer">
+                    <a href="#" class="btn">Close</a>
+                    <a href="#" class="btn btn-primary">Save changes</a>
+                </div>
+            </div> #}
         </main>
-        
 {% endblock %}
