Correction RGPD et création Mentions légales

--- a/templates/home/rgpd.html.twig
+++ b/templates/home/rgpd.html.twig
@@ -6,13 +6,13 @@
 {% block body %}
 
 <!-- Bootstrap Container -->
-<div class="container-fluid p-0">
-    <main class="container-fluid rgpd">
-    <h1>Mentions légales</h1>
+<div class="container-fluid p-0 m-5">
+    <main class="container-fluid rgpd m-5">
+    <h2>Politique de confidentialité (RGPD)</h2>
 
 
               
-                <h2>Définitions</h2>
+                <h3>Définitions</h3>
                 <p><b>Client&nbsp;:</b>&nbsp;tout professionnel ou personne physique capable au sens des articles 1123 et suivants du Code civil, ou personne morale, qui visite le Site objet des présentes conditions générales.<br>
                 <b>Prestations et Services&nbsp;:</b> <a href="http://www.ynovagroup.com">http://www.ynovagroup.com</a> met à disposition des Clients&nbsp;:</p>
 
