fixé erreur de style dans sider bar et navbar

--- a/templates/backend/notification/index.html.twig
+++ b/templates/backend/notification/index.html.twig
@@ -4,39 +4,40 @@
 
 {% block body %}
     <div class="container">
+        <div class="card p-4">
 
-        <div class="alert alert-success">
-            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">
-                ×</button>
-            </span><i class="fas fa-file-alt"></i> <strong>Documents</strong>
-            <hr class="message-inner-separator">
-            <p>Vous avez reçu un document (type de document) de la pharmacie (nom de la pharmacie)</p>
-            <p class="text-right"><a href="" class="alert-link">voir le document <i class="fas fa-external-link-alt"></i></a></p>
+            <div class="alert alert-success">
+                <button type="button" class="close" data-dismiss="alert" aria-hidden="true">
+                    ×</button>
+                </span><i class="fas fa-file-alt"></i> <strong>Documents</strong>
+                <hr class="message-inner-separator">
+                <p>Vous avez reçu un document (type de document) de la pharmacie (nom de la pharmacie)</p>
+                <p class="text-right"><a href="" class="alert-link">voir le document <i class="fas fa-external-link-alt"></i></a></p>
+            </div>
+            <div class="alert alert-danger">
+                <button type="button" class="close" data-dismiss="alert" aria-hidden="true">
+                    ×</button>
+                </span><i class="fas fa-file-alt"></i> <strong>Documents</strong>
+                <hr class="message-inner-separator">
+                <p>Vous avez reçu un document (type de document) de la pharmacie (nom de la pharmacie)</p>
+                <p class="text-right"><a href="" class="alert-link">voir le document <i class="fas fa-external-link-alt"></i></a></p>
+            </div>
+            <div class="alert alert-success">
+                <button type="button" class="close" data-dismiss="alert" aria-hidden="true">
+                    ×</button>
+                </span><i class="fas fa-file-alt"></i> <strong>Documents</strong>
+                <hr class="message-inner-separator">
+                <p>Vous avez reçu un document (type de document) de la pharmacie (nom de la pharmacie)</p>
+                <p class="text-right"><a href="" class="alert-link">voir le document <i class="fas fa-external-link-alt"></i></a></p>
+            </div>
+            <div class="alert alert-success">
+                <button type="button" class="close" data-dismiss="alert" aria-hidden="true">
+                    ×</button>
+                </span><i class="fas fa-file-alt"></i> <strong>Documents</strong>
+                <hr class="message-inner-separator">
+                <p>Vous avez reçu un document (type de document) de la pharmacie (nom de la pharmacie)</p>
+                <p class="text-right"><a href="" class="alert-link">voir le document <i class="fas fa-external-link-alt"></i></a></p>
+            </div>
         </div>
-        <div class="alert alert-danger">
-            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">
-                ×</button>
-            </span><i class="fas fa-file-alt"></i> <strong>Documents</strong>
-            <hr class="message-inner-separator">
-            <p>Vous avez reçu un document (type de document) de la pharmacie (nom de la pharmacie)</p>
-            <p class="text-right"><a href="" class="alert-link">voir le document <i class="fas fa-external-link-alt"></i></a></p>
-        </div>
-        <div class="alert alert-success">
-            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">
-                ×</button>
-            </span><i class="fas fa-file-alt"></i> <strong>Documents</strong>
-            <hr class="message-inner-separator">
-            <p>Vous avez reçu un document (type de document) de la pharmacie (nom de la pharmacie)</p>
-            <p class="text-right"><a href="" class="alert-link">voir le document <i class="fas fa-external-link-alt"></i></a></p>
-        </div>
-        <div class="alert alert-success">
-            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">
-                ×</button>
-            </span><i class="fas fa-file-alt"></i> <strong>Documents</strong>
-            <hr class="message-inner-separator">
-            <p>Vous avez reçu un document (type de document) de la pharmacie (nom de la pharmacie)</p>
-            <p class="text-right"><a href="" class="alert-link">voir le document <i class="fas fa-external-link-alt"></i></a></p>
-        </div>
-
     </div>
 {% endblock %}
