--- a/templates/backend/backend_layout.html.twig
+++ b/templates/backend/backend_layout.html.twig
@@ -13,7 +13,7 @@
         {% include('/backend/partials/__navbar.html.twig') %}
         <div class="row py-4">
             {% include('backend/partials/__sidebar.html.twig') %}
-            <div class="col-10 pr-5">
+            <div class="col-12 col-lg-10 pr-lg-5">
                 {% block body %}{% endblock %}
             </div>
         </div>
