--- a/templates/backend/partials/__sidebar.html.twig
+++ b/templates/backend/partials/__sidebar.html.twig
@@ -1,4 +1,4 @@
-        <nav class="col-md-2 pr-0 d-none d-md-block bg-light sidebar">
+        <nav class="col-md-2 pr-0 d-none d-lg-block bg-light sidebar">
           <div class="sidebar-sticky">
 
             <h4 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
