--- a/templates/backend/notification/index.html.twig
+++ b/templates/backend/notification/index.html.twig
@@ -4,6 +4,7 @@
 
 {% block body %}
     <div class="container">
+    <h1>Documents reçus</h1>
         <div class="card p-4">
 
             <div class="alert alert-success">
