--- a/templates/backend/partials/__navbar.html.twig
+++ b/templates/backend/partials/__navbar.html.twig
@@ -1,4 +1,4 @@
-<div class="container-fluid p-0">
+<div class="container-fluid py-5">
     <!-- H E A D E R  S E C T I O N -->
     <header class="header">
         <!-- Navigation with a burger menu -->
