--- a/templates/backend/partials/__sidebar.html.twig
+++ b/templates/backend/partials/__sidebar.html.twig
@@ -8,14 +8,14 @@
             </h4>     
             <ul class="nav flex-column mb-2">
               <li class="nav-item">
-                <a class="nav-link" href="{{ path('backend_notification') }}">
+                <a class="nav-link text-dark" href="{{ path('backend_notification') }}">
                     <i class="fas fa-file-import"></i>
                     Documents reçus
                     <span class="badge badge-pill badge-success">5</span>
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link text-dark" href="#">
                     <i class="far fa-envelope"></i>
                     Messages reçus
                     <span class="badge badge-pill badge-success">2</span>
@@ -29,25 +29,25 @@
             </h4>
             <ul class="nav flex-column">
               <li class="nav-item">
-                <a class="nav-link" href="{{ path('company_index') }}">
+                <a class="nav-link text-dark" href="{{ path('company_index') }}">
                     <i class="far fa-hospital"></i>
                     Pharmacies
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{ path('user_index') }}">
+                <a class="nav-link text-dark" href="{{ path('user_index') }}">
                     <i class="far fa-user"></i>
                     Gestionnaires
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{ path('file_index') }}">
+                <a class="nav-link text-dark" href="{{ path('file_index') }}">
                     <i class="far fa-file-alt"></i>
                     Documents
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{ path('post_index') }}">
+                <a class="nav-link text-dark" href="{{ path('post_index') }}">
                     <i class="far fa-newspaper"></i>
                     Articles
                 </a>
