--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -50,10 +50,10 @@
 
                 {% if is_granted('ROLE_BUSINESS')%}
                     <li class="nav-item adherent">
-                        <a class="nav-link btn btn-danger adherent-btn btn-sm text-white" href="{{ path('backend_notification') }}">Accès back office</a>
+                        <a class="nav-link btn btn-primary adherent-btn btn-sm text-white" href="{{ path('backend_notification') }}">Accès back office</a>
                     </li>
                     <li class="nav-item adherent">
-                        <a class="nav-link btn btn-danger adherent-btn btn-sm text-white" href="{{ path('app_logout') }}">Déconnexion</a>
+                        <a class="nav-link btn btn-success adherent-btn btn-sm text-white" href="{{ path('app_logout') }}">Déconnexion</a>
                     </li>
                 {% elseif is_granted('IS_AUTHENTICATED_REMEMBERED') %}
                     <li class="nav-item adherent">
