--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -7,30 +7,41 @@
 
 <!-- Bootstrap Container -->
 <div class="container-fluid p-0 m-5">
-<!-- Section Blog--> 
-<div class="container">
-<h1 class="h2">Blog</h1>
-    {% for post in pagination %}
-    <div class="blog mt-5">
-        <h1 class="blog-title mt-5 h1">{{post.title}}</h1>
-        <span class="blog-date badge badge-pill badge-success">Posté le {{post.createdAt|date("d/m/y")}} par {{ post.author.firstname ~ ' ' ~ post.author.lastname}}</span>
-    </div>
-    {% if post.picture is defined %}
-        <img class="img-fluid rounded blog-img mt-3 mb-5" src="{{ post.picture }}" alt="">
-    {% endif %}
-    <div class="blog-post mb-5 p-3">
-        {{ post.content }}
-    </div>
-    {% if not loop.last %}
-        <hr>
-    {% endif %}
-    {% else %}
-        <div class="blog-post mb-5 p-3">
-            <p>Aucun article n'a été publié pour le moment</p>
-        <div>
-    {% endfor %}
-    <div class="navigation">
-    {{ knp_pagination_render(pagination) }}
+    <!-- Section Blog--> 
+    <div class="container">
+        <h1 class="h2">Blog</h1>
+        {% for post in pagination %}
+            <div class="card mb-3 bg-white">
+                {% if post.picture is defined %}
+                    <img class="card-img-top" src="{{ post.picture }}" style="max-height: 400px" alt="illustration de l'article">
+                {% endif %}
+                <div class="card-body">
+                    <h3 class="card-title">{{post.title}}</h3>
+                    <p class="card-text">{{ post.content }}</p>
+                    <p class="card-text"><small class="text-muted">Posté le {{post.createdAt|date("d/m/y")}} par <cite title="auteur">{{ post.author.firstname ~ ' ' ~ post.author.lastname}}</cite></small></p>
+                </div>
+            </div>
+
+
+            {# <div class="blog mt-5">
+                <h1 class="blog-title mt-5 h1">{{post.title}}</h1>
+                <span class="blog-date badge badge-pill badge-success">Posté le {{post.createdAt|date("d/m/y")}} par {{ post.author.firstname ~ ' ' ~ post.author.lastname}}</span>
+            </div>
+            {% if post.picture is defined %}
+                <img class="img-fluid rounded blog-img mt-3 mb-5" src="{{ post.picture }}" alt="">
+            {% endif %}
+            <div class="blog-post mb-5 p-3">
+                {{ post.content }}
+            </div> #}
+            {% if not loop.last %}
+                <hr>
+            {% endif %}
+        {% else %}
+            <div class="blog-post my-5 p-3 text-center">
+                <p>Aucun article n'a été publié pour le moment</p>
+            </div>
+        {% endfor %}
+        {{ knp_pagination_render(pagination) }}
     </div>
 </div>
 {% endblock %}
