--- a/templates/backend/post/_editModal.html.twig
+++ b/templates/backend/post/_editModal.html.twig
@@ -8,38 +8,38 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body">
-        <form id="postEdit">
-            <div class="form-group">
-                <label for="title">Titre de l'article</label>
-                <input class="form-control" type="text" name="title" id="title">
-            </div>
-            <div class="form-group">
-                <label for="content">Contenu de l'article</label>
-                <textarea class="form-control" type="text" name="content" id="content">
-                </textarea>
-            </div>
-            <div class="form-group">
-                <label for="author">Auteur de l'article</label>
-                <input class="form-control" type="text" name="author" id="author">
-            </div>
-            <div class="form-group">
-                <label for="picture">Image de l'article</label>
-                <input class="form-control" type="text" name="picture" id="picture">
-            </div>
-            <div class="form-group">
-                <label for="isActive">Article publié</label>
-                <select name="isActive" id="isActive" class="form-control">
-                  <option value="true">oui</option>
-                  <option value="false">non</option>
-                </select>
-            </div>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-danger" data-dismiss="modal">Fermer</button>
-        <button type="button" class="btn btn-primary">Enregistrer</button>
-      </div>
+      <form id="postEdit">
+        <div class="modal-body">
+              <div class="form-group">
+                  <label for="title">Titre de l'article</label>
+                  <input class="form-control" type="text" name="title" id="title">
+              </div>
+              <div class="form-group">
+                  <label for="content">Contenu de l'article</label>
+                  <textarea class="form-control" type="text" name="content" id="content">
+                  </textarea>
+              </div>
+              <div class="form-group">
+                  <label for="author">Auteur de l'article</label>
+                  <input class="form-control" type="text" name="author" id="author">
+              </div>
+              <div class="form-group">
+                  <label for="picture">Image de l'article</label>
+                  <input class="form-control" type="text" name="picture" id="picture">
+              </div>
+              <div class="form-group">
+                  <label for="isActive">Article publié</label>
+                  <select name="isActive" id="isActive" class="form-control">
+                    <option value="true">oui</option>
+                    <option value="false">non</option>
+                  </select>
+              </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Fermer</button>
+          <button type="submit" class="btn btn-primary">Enregistrer</button>
+        </div>
+      </form>
     </div>
   </div>
 </div>
