--- a/public/css/app.css
+++ b/public/css/app.css
@@ -342,7 +342,7 @@ footer > div > .h6 {
 
 /* Parallax */
 #parallax {
-    background-image: url('/images/ynovagroup_hero.jpg');
+    background-image: url('/images/teamwork.jpg');
     background-size: cover;
     background-attachment: fixed;
     width: 100%;
