Correctif Pop-Up RGPD

--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -286,7 +286,7 @@
                         </div>
                         <div class="modal-footer">
                         <button type="button" class="btn btn-success" id="popupOK" onclick="this.parentElement.parentElement.style.display='none';">
-                            OK
+                            Accepter
                             <i class="fas fa-check"></i>
                         </button>
                         <a href="{{ path('rgpd') }}" class="a-rgpd btn btn-light">En savoir plus</a>
