Schema partial added

--- a/templates/user/profil.html.twig
+++ b/templates/user/profil.html.twig
@@ -35,9 +35,9 @@
                         </div>
                     </div>
                     <!-- Section de téléchargement + tableau de fichiers -->
-                    <div class="container-fluid upload mb-5 text-center ">
-                        <h5 class="card-title text-center text-uppercase font-weight-bold">Mon espace document</h5>
-                         <h6 class="card-title text-center">Envoyer un document à mon conseiller</h6>
+                    <div class="card container-fluid upload mb-5 text-center ">
+                        <h5 class="card-title text-center text-uppercase font-weight-bold pt-5">Mon espace document</h5>
+                         {# <h6 class="card-title text-center">Envoyer un document à mon conseiller</h6> #}
                         <form class="container-fluid mx-auto">
                             <div class="form-group">
                                 <label for="exampleFormControlSelect1">
@@ -50,6 +50,7 @@
                                     <option>Autre</option>
                                 </select>
                             </div>
+                            <hr>
                             <label for="exampleFormControlSelect1">
                                 <p class="label text-center">Téléchargement de mon document</p>
                             </label>
