--- a/templates/backend/post/index.html.twig
+++ b/templates/backend/post/index.html.twig
@@ -9,6 +9,9 @@
     <h1>Liste des articles</h1>
 
 <div class="card p-4">
+    <div class="d-flex mb-3">
+        <a class="btn btn-success btn-sm" id="add-modal" href="{{ path('backend_post_create') }}"><i class="fas fa-plus-square"></i> Ajouter un article</a>
+    </div>
     <table id="postTable" class="table table-hover table-striped  w-100">
         <thead>
             <tr>
