--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -17,7 +17,7 @@
                 {% endif %}
                 <div class="card-body">
                     <h3 class="card-title">{{post.title}}</h3>
-                    <p class="card-text">{{ post.content }}</p>
+                    <p class="card-text">{{ post.content|raw }}</p>
                     <p class="card-text"><small class="text-muted">Posté le {{post.createdAt|date("d/m/y")}} par <cite title="auteur">{{ post.author.firstname ~ ' ' ~ post.author.lastname}}</cite></small></p>
                 </div>
             </div>
