--- a/templates/partials/_schema.html.twig
+++ b/templates/partials/_schema.html.twig
@@ -7,6 +7,7 @@
 ",
 	"url": "https://www.ynovagroup.com",
 	"telephone": "0134205268",
+    "email": "contact@ynovagroup.com",
 	"address": {
 		"@type": "PostalAddress",
 		"streetAddress": "43 GRANDE RUE",
