ajouté order sur l id dans datable

--- a/templates/backend/company/index.html.twig
+++ b/templates/backend/company/index.html.twig
@@ -6,6 +6,9 @@
     <h1>Liste des pharmacies</h1>
 
     <div class="card p-4">
+        <div class="d-flex mb-3">
+            <a class="btn btn-success btn-sm" id="add-modal" href="{{ path('backend_post_create') }}"><i class="fas fa-plus-square"></i> Ajouter une pharmacie</a>
+        </div>
         <table id="companyTable" class="table table-hover table-striped w-100">
             <thead>
                 <tr>
