--- a/templates/backend/company/_editModal.html.twig
+++ b/templates/backend/company/_editModal.html.twig
@@ -1,6 +1,6 @@
 <!-- Modal -->
 <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="editModalTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="editModalTitle">Modifier la phamarcie</h5>
@@ -15,12 +15,8 @@
                 <input class="form-control" type="text" name="companyName" id="companyName">
             </div>
             <div class="form-group">
-                <label for="companyMember">Nom du membre rattaché</label>
+                <label for="companyMember">Gestionnaire</label>
                 <input class="form-control" type="text" name="companyMember" id="companyMember">
-            </div>
-            <div class="form-group">
-                <label for="companyCommercial">Nom du commercial rattaché</label>
-                <input class="form-control" type="text" name="companyCommercial" id="companyCommercial">
             </div>
             <div class="form-group">
                 <label for="companyAdress1">Adresse</label>
@@ -39,6 +35,10 @@
                   <label for="companyCity">Ville</label>
                   <input class="form-control" type="text" name="companyCity" id="companyCity">
               </div>
+            </div>
+            <div class="form-group">
+                <label for="companyCommercial">Nom du commercial rattaché</label>
+                <input class="form-control" type="text" name="companyCommercial" id="companyCommercial">
             </div>
         </form>
       </div>
