--- a/templates/backend/notification/index.html.twig
+++ b/templates/backend/notification/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Notifications{% endblock %}
 
 {% block body %}
-    <div class="container">
+    <div class="container-fluid">
     <h1>Documents reçus</h1>
         <div class="card p-4">
 
